Update color scheme

--- a/_pgbackup/index_1716740195.html
+++ b/_pgbackup/index_1716740195.html
@@ -111,7 +111,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sivas Cumhuriyet University</h3>
                             <div class="subheading mb-3">Bachelor's Degree</div>
-                            <div style="color: #b1d7c6;">IT Systems and Technologies - Data Scientist Candidate</div>
+                            <div>IT Systems and Technologies - Data Scientist Candidate</div>
                             <p>Current GPA: 2.31</p>
                         </div>
                         <div class="flex-shrink-0">
@@ -123,10 +123,10 @@
             <hr class="m-0"/>
             <!-- Skills-->
             <section class="resume-section" id="skills">
-                <div class="resume-section-content" style="color: #b1d7c6;">
+                <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3" style="color: #b1d7c6;">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons" style="color: #b1d7c6;">
+                    <div class="subheading mb-3">Programming Languages & Tools</div>
+                    <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
                             <i class="fab fa-html5"></i>
                         </li>
@@ -168,18 +168,18 @@
                         </li>
                     </ul>
                 </ul>
-                <div class="subheading mb-3" style="color: #b1d7c6;">Workflow</div>
+                <div class="subheading mb-3">Workflow</div>
                 <ul class="fa-ul mb-0">
-                    <li><span class="fa-li"><i class="fas fa-check" style="color: #b1d7c6;"></i></span>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>
                         Data Collection and Cleaning
                     </li>
-                    <li><span class="fa-li" style="color: #b1d7c6;"><i class="fas fa-check"></i></span>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>
                         Exploratory Data Analysis (EDA)
                     </li>
-                    <li><span class="fa-li"><i class="fas fa-check" style="color: #b1d7c6;"></i></span>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>
                         Model Development and Evaluation
                     </li>
-                    <li><span class="fa-li"><i class="fas fa-check" style="color: #b1d7c6;"></i></span>
+                    <li><span class="fa-li"><i class="fas fa-check"></i></span>
                         Deployment and Monitoring
                     </li>
                 </ul>
@@ -187,7 +187,7 @@
     </section>
     <hr class="m-0"/>
     <!-- Interests-->
-    <section class="resume-section" id="interests" style="color: #b1d7c6;">
+    <section class="resume-section" id="interests">
         <div class="resume-section-content">
             <h2 class="mb-5">Interests</h2>
             <li class="list-inline-item">
