--- a/_pgbackup/index_1716740275.html
+++ b/_pgbackup/index_1716740275.html
@@ -111,7 +111,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sivas Cumhuriyet University</h3>
                             <div class="subheading mb-3">Bachelor's Degree</div>
-                            <div style="color: #b1d7c6;">IT Systems and Technologies - Data Scientist Candidate</div>
+                            <div>IT Systems and Technologies - Data Scientist Candidate</div>
                             <p>Current GPA: 2.31</p>
                         </div>
                         <div class="flex-shrink-0">
@@ -123,10 +123,10 @@
             <hr class="m-0"/>
             <!-- Skills-->
             <section class="resume-section" id="skills">
-                <div class="resume-section-content" style="color: #b1d7c6;">
+                <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3" style="color: #b1d7c6;">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons" style="color: #b1d7c6;">
+                    <ul class="list-inline dev-icons">
                         <li class="list-inline-item">
                             <i class="fab fa-html5"></i>
                         </li>
@@ -187,7 +187,7 @@
     </section>
     <hr class="m-0"/>
     <!-- Interests-->
-    <section class="resume-section" id="interests" style="color: #b1d7c6;">
+    <section class="resume-section" id="interests">
         <div class="resume-section-content">
             <h2 class="mb-5">Interests</h2>
             <li class="list-inline-item">
