Fix typos and mistakes

--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>I am Efe Can Kara, a 21-year-old Computer Science student with five years of experience working with Linux. My expertise lies in configuring systems, solving intricate problems, and programming in Python and C. Recently, I have developed a keen interest in IoT and data science, driven by my aspiration to create a meaningful impact 
-          As a data scientist, I find great satisfaction in unraveling complex datasets and deriving practical insights using statistical methods and machine learning. My strong Python skills enable me to craft robust data systems, construct intelligent models, and implement scalable solutions.
-          I thrive on pushing boundaries, whether it involves tweaking kernels or performing advanced number crunching, and I am dedicated to delivering impactful results. With my expertise in Linux and programming, I am fully equipped to tackle the challenges of IoT and artificial intelligence. My ultimate goal is to leverage data to inspire innovation and shape the future of technology.</p>
+        <p>I am Efe Can Kara, a confident 20-year-old Computer Science student with extensive experience in working with Linux for five years. My expertise lies in system configuration, complex problem-solving, and proficient programming in Python. Recently, I have developed a strong interest in data science, fueled by my ambition to make a meaningful impact. As a data scientist, I take great satisfaction in unraveling intricate datasets and extracting practical insights using statistical methods and machine learning. My robust Python skills enable me to develop sophisticated data systems, create intelligent models, and implement scalable solutions. I am deeply passionate about pushing boundaries, whether it involves fine-tuning kernels or conducting advanced number crunching, and I am dedicated to delivering impactful results. With my Linux and programming expertise, I am fully prepared to tackle the challenges of artificial intelligence. My ultimate goal is to leverage data to drive innovation and shape the future of technology.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -103,7 +101,7 @@
             <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>Data Scientist &amp; Linux Enthusiast.</h2>
+            <h2>Data Scientist &amp; Linux Enthusiast</h2>
             <p class="fst-italic py-3">
               Here are some information about me:
             </p>
@@ -184,7 +182,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -196,7 +193,7 @@
             <div class="progress">
               <span class="skill"><span>Python</span> <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -228,7 +225,7 @@
             <div class="progress">
               <span class="skill"><span>C/C++</span> <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -283,8 +280,14 @@
                 <li>efecan_kara@tuta.io</li>
               </ul>
             </div><!-- Edn Resume Item -->
+            
 
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Milas Anadolu High School</h4>
+              <h5>2017 - 2021</h5>
+              <p><em>Numerical</em></p>
+            </div><!-- Edn Resume Item -->
             <div class="resume-item">
               <h4>Sivas Cumhuriyet University</h4>
               <h5>2022 - Present</h5>
