--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="https://formspree.io/efecan_kara@proton.me" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form action="https://formspree.io/f/meojevqw" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
           
                 <div class="col-md-6">
